tests/types/result/errors/test_err_bare_return.sushi
# Tests error for returning bare value instead of Result.Ok()

fn test_func() i32:
    return 42

fn main() i32:
    return Result.Ok(0)
